@@ -116,7 +116,7 @@ public class PlayScene2D extends GameScene2D {
 				drawPacManMaze(0, t(3), level.world());
 			}
 			if (context.state() == GameState.LEVEL_TEST) {
-				drawText("TEST    L%d".formatted(levelNumber), ArcadeTheme.YELLOW, sceneFont(), t(8.5), t(21));
+				drawText(String.format("TEST    L%d", levelNumber), ArcadeTheme.YELLOW, sceneFont(), t(8.5), t(21));
 			} else if (context.state() == GameState.GAME_OVER || !context.hasCredit()) {
 				drawText("GAME  OVER", ArcadeTheme.RED, sceneFont(), t(9), t(21));
 			} else if (context.state() == GameState.READY) {
