@@ -63,7 +63,7 @@ public class ResourceManager {
 			return MessageFormat.format(pattern, args);
 		} catch (Exception x) {
 			Logger.error("No text resource found for key '{}'", keyPattern);
-			return "noresfound{%s}".formatted(keyPattern);
+			return String.format("noresfound{%s}", keyPattern);
 		}
 	}
 
@@ -129,7 +129,7 @@ public class ResourceManager {
 	 */
 	public Font font(String relPath, double size) {
 		if (size <= 0) {
-			throw new IllegalArgumentException("Font size must be positive but is %.2f".formatted(size));
+			throw new IllegalArgumentException(String.format("Font size must be positive but is %.2f", size));
 		}
 		var url = url(relPath);
 		var font = Font.loadFont(url.toExternalForm(), size);
